<resources>
    <string name="app_name">Alumni Mobile App</string>
    <string name="nama">Nama Lengkap</string>
    <string name="angkatan">Angkatan</string>
    <string name="no_hp">Nomor HP</string>
    <string name="email">Email</string>

    <string name="register">Daftar</string>
<<<<<<< Updated upstream
    <string name="view">Lihat Data Alumni</string>
=======
    <string name="view">Lihat dan Update Data Alumni</string>
    <string name="alumni_mobile_app">Alumni Mobile App</string>
    <string name="cowok">COWOK</string>
    <string name="cewek">CEWEK</string>
>>>>>>> Stashed changes
</resources>